@@ -1,0 +1,5 @@
+[nosetests]
+nocapture=1
+cover-package=repoze.tm
+with-coverage=1
+cover-erase=1
