@@ -1,3 +1,8 @@
+Next release
+============
+
+- 100% test coverage.
+
 1.0a4 (2009/1/6)
 ================
 
